Сощдана БД,функция бронирования и добавлены даты