@@ -1,100 +1,128 @@
 package ru.practicum.shareit.item;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.Booking;
+import ru.practicum.shareit.booking.BookingRepository;
+import ru.practicum.shareit.booking.BookingStatus;
+import ru.practicum.shareit.booking.dto.BookingShortDto;
 import ru.practicum.shareit.error.ForbiddenException;
 import ru.practicum.shareit.error.NotFoundException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemMapper;
+import ru.practicum.shareit.item.dto.ItemResponseDto;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.UserDto;
-import ru.practicum.shareit.user.UserMapper;
 import ru.practicum.shareit.user.UserService;
 
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
+import static ru.practicum.shareit.item.dto.ItemMapper.toBookingShortDto;
+
 @Service
+@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
-    private final Map<Long, Item> items = new HashMap<>();
-    private Long idCounter = 1L;
+    private final ItemRepository itemRepository;
     private final UserService userService;
-
-    public ItemServiceImpl(UserService userService) {
-        this.userService = userService;
-    }
+    private final BookingRepository bookingRepository;
 
 
     @Override
+    @Transactional
     public ItemDto createItem(Long userId, ItemDto itemDto) {
-        UserDto userDto = userService.getUserById(userId);
-        User owner = UserMapper.toUser(userDto);
-
-        Item item = ItemMapper.toItem(itemDto);
-        item.setId(idCounter++);
-        item.setOwner(owner);
-        items.put(item.getId(), item);
-
-        return ItemMapper.toItemDto(item);
+        User owner = userService.getUserEntityById(userId);
+        Item item = ItemMapper.toItem(itemDto, owner); // Теперь передаем владельца
+        Item savedItem = itemRepository.save(item);
+        return ItemMapper.toItemDto(savedItem);
     }
 
     @Override
+    @Transactional
     public ItemDto updateItem(Long userId, Long itemId, ItemDto itemDto) {
-        Item existingItem = items.get(itemId);
+        Item existingItem = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Предмет с ID " + itemId + " не найден"));
+
         if (!existingItem.getOwner().getId().equals(userId)) {
-            throw new ForbiddenException("Пользователь " + userId + " не является владельцем предмета");
+            throw new ForbiddenException("Редактирование запрещено: пользователь не является владельцем");
         }
 
-        if (itemDto.getName() != null && !itemDto.getName().trim().isEmpty()) {
+        if (itemDto.getName() != null && !itemDto.getName().isBlank()) {
             existingItem.setName(itemDto.getName().trim());
         }
 
-        if (itemDto.getDescription() != null && !itemDto.getDescription().trim().isEmpty()) {
+        if (itemDto.getDescription() != null && !itemDto.getDescription().isBlank()) {
             existingItem.setDescription(itemDto.getDescription().trim());
         }
 
         if (itemDto.getAvailable() != null) {
             existingItem.setAvailable(itemDto.getAvailable());
         }
+
         return ItemMapper.toItemDto(existingItem);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ItemDto getItemById(Long itemId) {
-        Item item = items.get(itemId);
-        if (item == null) {
-            throw new NotFoundException("Предмет с ID " + itemId + " не найден");
-        }
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Предмет с ID " + itemId + " не найден"));
         return ItemMapper.toItemDto(item);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<ItemDto> getAllItemsByOwner(Long userId) {
-        if (userService.getUserById(userId) == null) {
+        if (!userService.existsById(userId)) {
             throw new NotFoundException("Пользователь с ID " + userId + " не найден");
         }
-        return items.values().stream()
-                .filter(item -> item.getOwner().getId().equals(userId))
+
+        return itemRepository.findByOwnerIdOrderById(userId).stream()
+                .map(ItemMapper::toItemDto)
+                .collect(Collectors.toList());
+    }
+
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<ItemDto> searchItems(String text) {
+        if (text == null || text.isBlank()) {
+            return List.of();
+        }
+
+        return itemRepository.searchAvailableItems(text.toLowerCase()).stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<ItemDto> searchItems(String text) {
-        if (text == null || text.isBlank()) {
-            return new ArrayList<>();
+    @Transactional(readOnly = true)
+    public List<ItemResponseDto> getAllItemsByOwnerWithBookings(Long userId) {
+        if (!userService.existsById(userId)) {
+            throw new NotFoundException("Пользователь с ID " + userId + " не найден");
         }
 
-        String lowerCaseText = text.toLowerCase();
+        List<Item> items = itemRepository.findByOwnerIdOrderById(userId);
+        LocalDateTime now = LocalDateTime.now();
 
-        return items.values().stream()
-                .filter(item -> item.getAvailable() &&
-                        (item.getName().toLowerCase().contains(lowerCaseText) ||
-                                item.getDescription().toLowerCase().contains(lowerCaseText)))
-                .map(ItemMapper::toItemDto)
+        return items.stream()
+                .map(item -> {
+                    ItemResponseDto dto = ItemMapper.toItemResponseDto(item);
+
+                    bookingRepository.findFirstByItemIdAndStatusAndEndBeforeOrderByEndDesc(
+                                    item.getId(), BookingStatus.APPROVED, now)
+                            .ifPresent(booking -> dto.setLastBooking(toBookingShortDto(booking)));
+
+                    bookingRepository.findFirstByItemIdAndStatusAndStartAfterOrderByStartAsc(
+                                    item.getId(), BookingStatus.APPROVED, now)
+                            .ifPresent(booking -> dto.setNextBooking(toBookingShortDto(booking)));
+
+                    return dto;
+                })
                 .collect(Collectors.toList());
     }
+
 }
